# trading-gold

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
.claude/: launch.json  settings.local.json
docs/: estrategias_v2.md  estrategias_v3.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: Data.tsx  Features.tsx  Home.tsx  Live.tsx  Meta.tsx  Multi.tsx  Regime.tsx  Risk.tsx  Strategies.tsx
src/gold_bot/: __init__.py  assets.py  config.py
src/gold_bot/api/: data.py  ensemble.py  live.py  main.py  meta.py  multi.py  regime.py  risk.py  shadow.py  strategies.py
src/gold_bot/backtest/: deflated_sharpe.py  intraday.py  report.py  simple.py
src/gold_bot/data/: cot.py  db.py  download.py  features.py  intraday.py  macro.py
src/gold_bot/execution/: broker.py  daily_run.py  notify.py  paper_broker.py  simulation.py  telegram_bot.py
src/gold_bot/meta_model/: dataset.py  labeling.py  model.py  pipeline.py  purged_kfold.py
src/gold_bot/regime/: hmm.py
src/gold_bot/risk/: ensemble.py  gating.py  multi_asset.py  portfolio.py  stress.py
src/gold_bot/strategies/: __init__.py  base.py  breakout.py  carry.py  macro.py  (+13 more)
tests/: test_backtest.py  test_config.py  test_daily_run.py  test_data.py  test_ensemble_validation.py  test_features.py  test_gating.py  test_intraday.py  test_intraday_strategies.py  test_meta_model.py  test_notify.py  test_paper_broker.py  test_portfolio.py  test_regime.py  test_shadow.py  test_simulation.py  test_strategies_v2.py  test_strategies_v3.py
(+1 files in other folders)
