[project]
name = "gold-hybrid-bot"
version = "0.1.0"
description = "Sistema híbrido de trading algorítmico en XAU/USD"
requires-python = ">=3.11"
dependencies = [
    # Fase 0 — solo lo necesario para el backend del dashboard y la base.
    # Las dependencias de ML/backtest (xgboost, hmmlearn, vectorbt...)
    # se añaden en la fase que las use, para mantener el entorno ligero.
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gold_bot"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort (orden de imports)
    "UP",  # pyupgrade
    "B",   # bugbear (bugs comunes)
    "SIM", # simplificaciones
]

[tool.pytest.ini_options]
testpaths = ["tests"]
